tests/errors/E031.zen
void main() {
    @println();         // E031: Argument count mismatch in intrinsic function call.
    @println("{}");     // E031: Argument count mismatch in intrinsic function call.
}